--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,19 @@
 *.tar.gz
 *.rar
 
+# Eclipse #
+.classpath
+.project
+.settings/
+
+# Intellij #
+.idea/
+*.iml
+*.iws
+
+# Maven
+log/
+target/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
